[gd_scene load_steps=4 format=3 uid="uid://d0km0wgud5wi8"]

[ext_resource type="Script" path="res://WorldMap/WorldObjects/WO_Vehicle/WO_Vehicle.gd" id="1_b3nlp"]
[ext_resource type="PackedScene" uid="uid://b6jedjmapq2bq" path="res://WorldMap/WorldObjects/WO_Generic/WO_WorldObject.tscn" id="2_jug7c"]
[ext_resource type="Texture2D" uid="uid://cmoprwq5vqw0m" path="res://WorldMap/WorldObjects/WO_Vehicle/truck.png" id="2_soo2i"]

[node name="WO_Vehicle" type="Node2D"]
script = ExtResource("1_b3nlp")

[node name="WorldObject" parent="." instance=ExtResource("2_jug7c")]

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_soo2i")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25

[connection signal="target_reached" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_target_reached"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
